adjusting test