@@ -29,18 +29,8 @@ public class MultiSegmentTest {
         Segment actual
     ) {
         assertNotNull(actual);
-
-        assertEquals(
-            expectedB,
-            actual.b,
-            "Wrong beginning."
-        );
-
-        assertEquals(
-            expectedE,
-            actual.e,
-            "Wrong ending."
-        );
+        assertEquals(expectedB, actual.b, "Wrong beginning.");
+        assertEquals(expectedE, actual.e, "Wrong ending.");
     }
 
 
@@ -48,32 +38,17 @@ public class MultiSegmentTest {
         Segment expected,
         Segment actual
     ) {
-        assertNotNull(actual);
-
-        assertEquals(
-            expected.b,
-            actual.b,
-            "Wrong beginning."
-        );
-
-        assertEquals(
-            expected.e,
-            actual.e,
-            "Wrong ending."
-        );
+        assertSegment(expected.b, expected.e, actual);
     }
 
 
     /*
      * Test-only access to the expanded sorted multisegment.
-     *
-     * This avoids changing MultiSegment merely to make testing easier.
      */
     @SuppressWarnings("unchecked")
     private static List<Segment> expanded(MultiSegment m) {
 
         try {
-
             Field field =
                 MultiSegment.class.getDeclaredField("ms");
 
@@ -91,27 +66,36 @@ public class MultiSegmentTest {
 
 
     /*
-     * Canonical representation preserving repetitions.
+     * Converts segments to strings without changing their order.
      */
-    private static List<String> signature(
+    private static List<String> orderedSignature(
         List<Segment> segments
     ) {
+        List<String> result = new ArrayList<>();
 
-        List<Segment> copy =
-            new ArrayList<>(segments);
-
-        Collections.sort(copy);
-
-        List<String> result =
-            new ArrayList<>();
-
-        for (Segment segment : copy) {
+        for (Segment segment : segments) {
             result.add(
                 "[" + segment.b + "," + segment.e + "]"
             );
         }
 
         return result;
+    }
+
+
+    /*
+     * Canonical representation of a multisegment.
+     * Repetitions are preserved.
+     */
+    private static List<String> signature(
+        List<Segment> segments
+    ) {
+        List<Segment> copy =
+            new ArrayList<>(segments);
+
+        Collections.sort(copy);
+
+        return orderedSignature(copy);
     }
 
 
@@ -126,7 +110,6 @@ public class MultiSegmentTest {
         List<Segment> expected,
         MultiSegment actual
     ) {
-
         assertEquals(
             signature(expected),
             signature(actual)
@@ -138,11 +121,29 @@ public class MultiSegmentTest {
         MultiSegment expected,
         MultiSegment actual
     ) {
-
         assertEquals(
             signature(expected),
             signature(actual)
         );
+    }
+
+
+    private static int minB(
+        List<Segment> segments
+    ) {
+        if (segments.isEmpty()) {
+            throw new IllegalArgumentException(
+                "Multisegment must be nonempty."
+            );
+        }
+
+        int min = Integer.MAX_VALUE;
+
+        for (Segment segment : segments) {
+            min = Math.min(min, segment.b);
+        }
+
+        return min;
     }
 
 
@@ -152,15 +153,13 @@ public class MultiSegmentTest {
 
 
     /*
-     * Slow O(n^2) implementation of depth directly on
-     * expanded occurrences.
+     * Direct O(n^2) implementation of depth on the
+     * expanded multisegment.
      */
     private static int[] naiveDepths(
         List<Segment> segments
     ) {
-
         int n = segments.size();
-
         int[] longest = new int[n];
 
         for (int i = n - 1; i >= 0; i--) {
@@ -169,10 +168,7 @@ public class MultiSegmentTest {
 
             for (int j = i + 1; j < n; j++) {
 
-                if (
-                    segments.get(i)
-                        .precedes(segments.get(j))
-                ) {
+                if (segments.get(i).precedes(segments.get(j))) {
                     longest[i] =
                         Math.max(
                             longest[i],
@@ -181,7 +177,6 @@ public class MultiSegmentTest {
                 }
             }
         }
-
 
         int[] depth = new int[n];
 
@@ -193,16 +188,44 @@ public class MultiSegmentTest {
     }
 
 
+    private static List<List<Integer>> naiveFibers(
+        int[] depths
+    ) {
+        List<List<Integer>> fibers =
+            new ArrayList<>();
+
+        if (depths.length == 0) {
+            return fibers;
+        }
+
+        int maxDepth = 0;
+
+        for (int depth : depths) {
+            maxDepth = Math.max(maxDepth, depth);
+        }
+
+        for (int k = 0; k <= maxDepth; k++) {
+            fibers.add(new ArrayList<>());
+        }
+
+        for (int i = 0; i < depths.length; i++) {
+            fibers.get(depths[i]).add(i);
+        }
+
+        return fibers;
+    }
+
+
     /*
      * Direct implementation of Definition 3.1.
      *
-     * We deliberately do NOT use the optimization from
-     * MultiSegment.LeadingIndices().
+     * IMPORTANT:
+     * if several equal copies are possible, this chooses
+     * the FIRST occurrence, matching our canonical convention.
      */
     private static List<Integer> naiveLeadingIndices(
         List<Segment> segments
     ) {
-
         List<Integer> result =
             new ArrayList<>();
 
@@ -211,6 +234,7 @@ public class MultiSegmentTest {
         }
 
 
+        // Find min m.
         int minB = Integer.MAX_VALUE;
 
         for (Segment segment : segments) {
@@ -218,27 +242,26 @@ public class MultiSegmentTest {
         }
 
 
+        // Find i1:
+        // b minimal, then e minimal.
+        // Strict < means an equal later copy does not replace
+        // the first occurrence.
         int current = -1;
         int minimumE = Integer.MAX_VALUE;
 
-        /*
-         * For ties caused by repeated equal segments,
-         * choose the final occurrence. This matches the
-         * canonical choice made by the implementation.
-         */
         for (int i = 0; i < segments.size(); i++) {
 
-            Segment candidate = segments.get(i);
+            Segment candidate =
+                segments.get(i);
 
             if (
                 candidate.b == minB &&
-                candidate.e <= minimumE
+                candidate.e < minimumE
             ) {
                 minimumE = candidate.e;
                 current = i;
             }
         }
-
 
         result.add(current);
 
@@ -255,11 +278,13 @@ public class MultiSegmentTest {
             int bestE = Integer.MAX_VALUE;
 
 
-            for (
-                int i = 0;
-                i < segments.size();
-                i++
-            ) {
+            /*
+             * Search directly through all occurrences.
+             *
+             * Again, strict < ensures that if the best segment
+             * has repeated equal copies, the first one is kept.
+             */
+            for (int i = 0; i < segments.size(); i++) {
 
                 Segment candidate =
                     segments.get(i);
@@ -267,7 +292,7 @@ public class MultiSegmentTest {
                 if (
                     candidate.b == targetB &&
                     previous.precedes(candidate) &&
-                    candidate.e <= bestE
+                    candidate.e < bestE
                 ) {
                     bestE = candidate.e;
                     next = i;
@@ -279,55 +304,11 @@ public class MultiSegmentTest {
                 break;
             }
 
-
             result.add(next);
             current = next;
         }
 
-
         return result;
-    }
-
-
-    private static List<List<Integer>> naiveFibers(
-        int[] depths
-    ) {
-
-        List<List<Integer>> fibers =
-            new ArrayList<>();
-
-        if (depths.length == 0) {
-            return fibers;
-        }
-
-
-        int maxDepth = 0;
-
-        for (int depth : depths) {
-            maxDepth =
-                Math.max(maxDepth, depth);
-        }
-
-
-        for (
-            int k = 0;
-            k <= maxDepth;
-            k++
-        ) {
-            fibers.add(new ArrayList<>());
-        }
-
-
-        for (
-            int i = 0;
-            i < depths.length;
-            i++
-        ) {
-            fibers.get(depths[i]).add(i);
-        }
-
-
-        return fibers;
     }
 
 
@@ -336,7 +317,6 @@ public class MultiSegmentTest {
         int[] depths,
         int index
     ) {
-
         List<List<Integer>> fibers =
             naiveFibers(depths);
 
@@ -351,7 +331,6 @@ public class MultiSegmentTest {
                 (position + 1) % fiber.size()
             );
 
-
         return new Segment(
             segments.get(index).b,
             segments.get(next).e
@@ -363,7 +342,6 @@ public class MultiSegmentTest {
         List<Segment> segments,
         int[] depths
     ) {
-
         List<Segment> result =
             new ArrayList<>();
 
@@ -371,14 +349,9 @@ public class MultiSegmentTest {
             List<Integer> fiber :
             naiveFibers(depths)
         ) {
-
             int first = fiber.get(0);
-
             int last =
-                fiber.get(
-                    fiber.size() - 1
-                );
-
+                fiber.get(fiber.size() - 1);
 
             result.add(
                 new Segment(
@@ -388,7 +361,6 @@ public class MultiSegmentTest {
             );
         }
 
-
         return result;
     }
 
@@ -397,32 +369,23 @@ public class MultiSegmentTest {
         List<Segment> segments,
         int[] depths
     ) {
-
         List<Segment> result =
             new ArrayList<>();
-
 
         for (
             List<Integer> fiber :
             naiveFibers(depths)
         ) {
-
             for (
                 int p = 0;
                 p < fiber.size() - 1;
                 p++
             ) {
-
                 Segment current =
-                    segments.get(
-                        fiber.get(p)
-                    );
+                    segments.get(fiber.get(p));
 
                 Segment next =
-                    segments.get(
-                        fiber.get(p + 1)
-                    );
-
+                    segments.get(fiber.get(p + 1));
 
                 result.add(
                     new Segment(
@@ -433,7 +396,6 @@ public class MultiSegmentTest {
             }
         }
 
-
         return result;
     }
 
@@ -441,7 +403,6 @@ public class MultiSegmentTest {
     private static List<Segment> naiveMCross(
         List<Segment> segments
     ) {
-
         Set<Integer> IStar =
             new HashSet<>(
                 naiveLeadingIndices(segments)
@@ -450,19 +411,12 @@ public class MultiSegmentTest {
         List<Segment> result =
             new ArrayList<>();
 
-
-        for (
-            int i = 0;
-            i < segments.size();
-            i++
-        ) {
+        for (int i = 0; i < segments.size(); i++) {
 
             Segment segment =
                 segments.get(i);
 
-
             if (!IStar.contains(i)) {
-
                 result.add(segment);
 
             } else if (segment.b < segment.e) {
@@ -475,9 +429,9 @@ public class MultiSegmentTest {
                 );
             }
 
-            // If b == e and i is in I*, the summand is empty.
+            // If [a,a] is leading, truncation is empty,
+            // so nothing is added.
         }
-
 
         return result;
     }
@@ -491,51 +445,33 @@ public class MultiSegmentTest {
     @Test
     public void segmentOperations() {
 
-        Segment a = s(1, 7);
-        Segment b = s(2, 5);
-        Segment c = s(4, 9);
+        Segment outer = s(1, 7);
+        Segment inner = s(2, 5);
+        Segment later = s(4, 9);
+        Segment point = s(3, 3);
         Segment invalid = s(6, 3);
 
+        assertTrue(outer.isSegment(outer));
+        assertTrue(point.isSegment(point));
+        assertFalse(invalid.isSegment(invalid));
 
-        assertTrue(a.isSegment(a));
-        assertTrue(s(3, 3).isSegment(s(3, 3)));
+        assertTrue(inner.precedes(later));
 
-        assertFalse(
-            invalid.isSegment(invalid)
-        );
+        assertFalse(outer.precedes(inner));
+        assertFalse(outer.precedes(outer));
+        assertFalse(invalid.precedes(later));
 
-
+        // subsetEq(s1,s2) means s2 ⊆ s1.
         assertTrue(
-            b.precedes(c)
+            outer.subsetEq(outer, inner)
         );
 
         assertFalse(
-            a.precedes(b)
-        );
-
-        assertFalse(
-            a.precedes(a)
-        );
-
-        assertFalse(
-            invalid.precedes(c)
-        );
-
-
-        /*
-         * According to your subsetEq implementation,
-         * subsetEq(outer, inner) checks inner ⊆ outer.
-         */
-        assertTrue(
-            a.subsetEq(a, b)
-        );
-
-        assertFalse(
-            a.subsetEq(b, a)
+            outer.subsetEq(inner, outer)
         );
 
         assertTrue(
-            a.subsetEq(a, a)
+            outer.subsetEq(outer, outer)
         );
     }
 
@@ -554,9 +490,7 @@ public class MultiSegmentTest {
                 )
             );
 
-
         Collections.sort(segments);
-
 
         assertEquals(
             Arrays.asList(
@@ -566,13 +500,13 @@ public class MultiSegmentTest {
                 "[2,10]",
                 "[2,3]"
             ),
-            signature(segments)
+            orderedSignature(segments)
         );
     }
 
 
     // ============================================================
-    // Empty and minimal edge cases
+    // Empty and singleton cases
     // ============================================================
 
 
@@ -581,7 +515,6 @@ public class MultiSegmentTest {
 
         MultiSegment m =
             new MultiSegment();
-
 
         assertEquals(0, m.size());
 
@@ -608,7 +541,6 @@ public class MultiSegmentTest {
             m.MCross().size()
         );
 
-
         assertThrows(
             IllegalStateException.class,
             m::DeltaCircle
@@ -621,22 +553,25 @@ public class MultiSegmentTest {
 
         assertThrows(
             IndexOutOfBoundsException.class,
+            () -> m.distinctIndex(-1)
+        );
+
+        assertThrows(
+            IndexOutOfBoundsException.class,
             () -> m.SegmentTransform(0)
         );
     }
 
 
     @Test
-    public void singletonPointSegment() {
+    public void singletonNonPointSegment() {
 
         MultiSegment m =
             new MultiSegment(
-                s(5, 5)
+                s(5, 8)
             );
 
-
         assertEquals(1, m.size());
-
         assertEquals(0, m.depth(0));
 
         assertEquals(
@@ -649,10 +584,9 @@ public class MultiSegmentTest {
             m.DistinguishedIndices()
         );
 
-
         assertSegment(
             5,
-            5,
+            8,
             m.SegmentTransform(0)
         );
 
@@ -662,22 +596,47 @@ public class MultiSegmentTest {
             m.DeltaCircle()
         );
 
-
         assertSameMultisegment(
-            List.of(s(5, 5)),
+            List.of(s(5, 8)),
             m.l()
         );
-
 
         assertEquals(
             0,
             m.DerivedMultisegment().size()
         );
 
+        // -[5,8] = [6,8].
+        assertSameMultisegment(
+            List.of(s(6, 8)),
+            m.MCross()
+        );
+    }
 
-        /*
-         * Delta* = -[5,5] = empty.
-         */
+
+    @Test
+    public void singletonPointSegment() {
+
+        MultiSegment m =
+            new MultiSegment(
+                s(5, 5)
+            );
+
+        assertEquals(1, m.size());
+        assertEquals(0, m.depth(0));
+
+        assertEquals(
+            List.of(0),
+            m.LeadingIndices()
+        );
+
+        assertSegment(
+            5,
+            5,
+            m.DeltaCircle()
+        );
+
+        // -[5,5] = empty.
         assertEquals(
             0,
             m.MCross().size()
@@ -686,7 +645,66 @@ public class MultiSegmentTest {
 
 
     // ============================================================
-    // Repetition edge case
+    // Expanded/distinct index tests
+    // ============================================================
+
+
+    @Test
+    public void distinctIndexHandlesMultiplicities() {
+
+        MultiSegment m =
+            new MultiSegment(
+                s(3, 4),
+
+                s(1, 8),
+                s(1, 8),
+
+                s(1, 5),
+                s(1, 5),
+                s(1, 5),
+
+                s(2, 7)
+            );
+
+        /*
+         * Expanded order:
+         *
+         * 0 [1,8]   distinct 0
+         * 1 [1,8]   distinct 0
+         *
+         * 2 [1,5]   distinct 1
+         * 3 [1,5]   distinct 1
+         * 4 [1,5]   distinct 1
+         *
+         * 5 [2,7]   distinct 2
+         *
+         * 6 [3,4]   distinct 3
+         */
+
+        assertEquals(0, m.distinctIndex(0));
+        assertEquals(0, m.distinctIndex(1));
+
+        assertEquals(1, m.distinctIndex(2));
+        assertEquals(1, m.distinctIndex(3));
+        assertEquals(1, m.distinctIndex(4));
+
+        assertEquals(2, m.distinctIndex(5));
+        assertEquals(3, m.distinctIndex(6));
+
+        assertThrows(
+            IndexOutOfBoundsException.class,
+            () -> m.distinctIndex(-1)
+        );
+
+        assertThrows(
+            IndexOutOfBoundsException.class,
+            () -> m.distinctIndex(7)
+        );
+    }
+
+
+    // ============================================================
+    // Repeated equal segments
     // ============================================================
 
 
@@ -701,9 +719,7 @@ public class MultiSegmentTest {
                 s(2, 5)
             );
 
-
         assertEquals(4, m.size());
-
 
         for (int i = 0; i < 4; i++) {
 
@@ -721,15 +737,21 @@ public class MultiSegmentTest {
 
 
         /*
-         * The implementation chooses the final occurrence
-         * of the identical segment for i1.
+         * LeadingIndices uses our canonical convention:
+         * choose the FIRST equal occurrence.
          */
         assertEquals(
-            List.of(3),
+            List.of(0),
             m.LeadingIndices()
         );
 
 
+        /*
+         * This is different from I'.
+         *
+         * j_0 is the LAST element of the admissible
+         * depth-0 enumeration.
+         */
         assertEquals(
             Set.of(3),
             m.DistinguishedIndices()
@@ -752,7 +774,7 @@ public class MultiSegmentTest {
 
 
         assertSameMultisegment(
-            List.of(
+            Arrays.asList(
                 s(2, 5),
                 s(2, 5),
                 s(2, 5)
@@ -761,6 +783,13 @@ public class MultiSegmentTest {
         );
 
 
+        /*
+         * The first copy is truncated:
+         *
+         * [2,5] -> [3,5].
+         *
+         * The other three copies remain.
+         */
         assertSameMultisegment(
             Arrays.asList(
                 s(2, 5),
@@ -774,7 +803,46 @@ public class MultiSegmentTest {
 
 
     // ============================================================
-    // Main hard deterministic example
+    // Depth tests
+    // ============================================================
+
+
+    @Test
+    public void completeChainHasAllDepths() {
+
+        MultiSegment m =
+            new MultiSegment(
+                s(0, 2),
+                s(1, 3),
+                s(2, 4),
+                s(3, 5)
+            );
+
+        assertEquals(3, m.depth(0));
+        assertEquals(2, m.depth(1));
+        assertEquals(1, m.depth(2));
+        assertEquals(0, m.depth(3));
+
+        /*
+         * This also explicitly checks that if maxDepth = 3,
+         * all depths 0,1,2,3 occur.
+         */
+        Set<Integer> depths =
+            new HashSet<>();
+
+        for (int i = 0; i < m.size(); i++) {
+            depths.add(m.depth(i));
+        }
+
+        assertEquals(
+            Set.of(0, 1, 2, 3),
+            depths
+        );
+    }
+
+
+    // ============================================================
+    // Main deterministic RSK example
     // ============================================================
 
 
@@ -796,19 +864,17 @@ public class MultiSegmentTest {
         /*
          * Expanded canonical order:
          *
-         * 0  [1,4]      depth 2
-         * 1  [2,3]      depth 2
-         * 2  [4,8]      depth 1
-         * 3  [5,7]      depth 1
-         * 4  [8,12]     depth 0
-         * 5  [9,11]     depth 0
-         * 6  [9,11]     depth 0
+         * 0 [1,4]    depth 2
+         * 1 [2,3]    depth 2
+         * 2 [4,8]    depth 1
+         * 3 [5,7]    depth 1
+         * 4 [8,12]   depth 0
+         * 5 [9,11]   depth 0
+         * 6 [9,11]   depth 0
          */
-
 
         int[] expectedDepths =
             {2, 2, 1, 1, 0, 0, 0};
-
 
         for (
             int i = 0;
@@ -830,9 +896,7 @@ public class MultiSegmentTest {
          * d^-1(1) = [2,3]
          * d^-1(2) = [0,1]
          *
-         * Hence
-         *
-         * I' = {6,3,1}.
+         * Therefore I' = {6,3,1}.
          */
         assertEquals(
             Set.of(1, 3, 6),
@@ -841,44 +905,37 @@ public class MultiSegmentTest {
 
 
         assertSegment(
-            1,
-            3,
+            1, 3,
             m.SegmentTransform(0)
         );
 
         assertSegment(
-            2,
-            4,
+            2, 4,
             m.SegmentTransform(1)
         );
 
         assertSegment(
-            4,
-            7,
+            4, 7,
             m.SegmentTransform(2)
         );
 
         assertSegment(
-            5,
-            8,
+            5, 8,
             m.SegmentTransform(3)
         );
 
         assertSegment(
-            8,
-            11,
+            8, 11,
             m.SegmentTransform(4)
         );
 
         assertSegment(
-            9,
-            11,
+            9, 11,
             m.SegmentTransform(5)
         );
 
         assertSegment(
-            9,
-            12,
+            9, 12,
             m.SegmentTransform(6)
         );
 
@@ -933,12 +990,12 @@ public class MultiSegmentTest {
 
 
     // ============================================================
-    // Hard test specifically for Definition 3.1
+    // Leading indices
     // ============================================================
 
 
     @Test
-    public void leadingIndicesChoosesMinimalEAndStopsCorrectly() {
+    public void leadingIndicesChoosesMinimalEAndFirstEqualCopy() {
 
         MultiSegment m =
             new MultiSegment(
@@ -965,8 +1022,8 @@ public class MultiSegmentTest {
          *
          *  2 [1,9]
          *  3 [1,5]
-         *  4 [1,3]
-         *  5 [1,3]    <- i2
+         *  4 [1,3]    <- i2: FIRST equal copy
+         *  5 [1,3]
          *
          *  6 [2,10]
          *  7 [2,4]    <- i3
@@ -977,19 +1034,18 @@ public class MultiSegmentTest {
          *
          * 11 [4,5]
          *
-         * At [3,5], b+1 exists, but [4,5] does NOT
-         * strictly follow it because 5 < 5 is false.
+         * [4,5] cannot follow [3,5],
+         * because the ending inequality is strict.
          */
 
-
         assertEquals(
-            List.of(1, 5, 7, 10),
+            List.of(1, 4, 7, 10),
             m.LeadingIndices()
         );
 
 
         /*
-         * min m = 0, k = 4
+         * min m = 0 and k = 4.
          *
          * Delta°(m) = [0,3].
          */
@@ -1001,8 +1057,65 @@ public class MultiSegmentTest {
     }
 
 
+    @Test
+    public void leadingIndicesStopsWhenNextBeginningIsMissing() {
+
+        MultiSegment m =
+            new MultiSegment(
+                s(0, 2),
+                s(2, 100),
+                s(3, 101)
+            );
+
+        /*
+         * i1 = [0,2].
+         *
+         * Definition 3.1 requires the next beginning
+         * to be exactly 1.
+         *
+         * No such segment exists, so we stop immediately.
+         */
+        assertEquals(
+            List.of(0),
+            m.LeadingIndices()
+        );
+
+        assertSegment(
+            0,
+            0,
+            m.DeltaCircle()
+        );
+    }
+
+
+    @Test
+    public void leadingIndicesStopsWhenNextBlockHasNoValidEnding() {
+
+        MultiSegment m =
+            new MultiSegment(
+                s(0, 5),
+                s(1, 5),
+                s(1, 4),
+                s(2, 100)
+            );
+
+        /*
+         * i1 = [0,5].
+         *
+         * At b = 1 we have [1,5], [1,4],
+         * but neither satisfies 5 < e.
+         *
+         * We therefore stop, even though later b-blocks exist.
+         */
+        assertEquals(
+            List.of(0),
+            m.LeadingIndices()
+        );
+    }
+
+
     // ============================================================
-    // Randomized test against independent naïve algorithms
+    // Randomized comparison against independent definitions
     // ============================================================
 
 
@@ -1015,10 +1128,435 @@ public class MultiSegmentTest {
 
         for (
             int trial = 0;
-            trial < 300;
+            trial < 500;
             trial++
         ) {
+            int n =
+                1 + random.nextInt(12);
 
+            Segment[] input =
+                new Segment[n];
+
+
+            for (int i = 0; i < n; i++) {
+
+                int b =
+                    random.nextInt(11) - 5;
+
+                int e =
+                    b + random.nextInt(7);
+
+                input[i] =
+                    new Segment(b, e);
+            }
+
+
+            MultiSegment m =
+                new MultiSegment(input);
+
+            List<Segment> canonical =
+                expanded(m);
+
+            int[] naiveDepth =
+                naiveDepths(canonical);
+
+            String message =
+                "Trial " + trial
+                + ", m = "
+                + signature(canonical);
+
+
+            // ------------------------------------------------
+            // depth
+            // ------------------------------------------------
+
+            for (
+                int i = 0;
+                i < canonical.size();
+                i++
+            ) {
+                assertEquals(
+                    naiveDepth[i],
+                    m.depth(i),
+                    message
+                    + ", wrong depth at index "
+                    + i
+                );
+            }
+
+
+            // ------------------------------------------------
+            // No depth between 0 and maxDepth may be absent.
+            // ------------------------------------------------
+
+            int maxDepth = 0;
+
+            Set<Integer> actualDepths =
+                new HashSet<>();
+
+            for (int depth : naiveDepth) {
+                maxDepth =
+                    Math.max(maxDepth, depth);
+
+                actualDepths.add(depth);
+            }
+
+            for (int k = 0; k <= maxDepth; k++) {
+                assertTrue(
+                    actualDepths.contains(k),
+                    message
+                    + ", missing depth "
+                    + k
+                );
+            }
+
+
+            // ------------------------------------------------
+            // Delta'_i
+            // ------------------------------------------------
+
+            for (
+                int i = 0;
+                i < canonical.size();
+                i++
+            ) {
+                Segment expected =
+                    naiveSegmentTransform(
+                        canonical,
+                        naiveDepth,
+                        i
+                    );
+
+                Segment actual =
+                    m.SegmentTransform(i);
+
+                assertEquals(
+                    expected.b,
+                    actual.b,
+                    message
+                    + ", wrong Delta' beginning at "
+                    + i
+                );
+
+                assertEquals(
+                    expected.e,
+                    actual.e,
+                    message
+                    + ", wrong Delta' ending at "
+                    + i
+                );
+            }
+
+
+            // ------------------------------------------------
+            // I'
+            // ------------------------------------------------
+
+            Set<Integer> expectedDistinguished =
+                new HashSet<>();
+
+            for (
+                List<Integer> fiber :
+                naiveFibers(naiveDepth)
+            ) {
+                expectedDistinguished.add(
+                    fiber.get(
+                        fiber.size() - 1
+                    )
+                );
+            }
+
+            assertEquals(
+                expectedDistinguished,
+                m.DistinguishedIndices(),
+                message + ", wrong I'"
+            );
+
+
+            // ------------------------------------------------
+            // l(m)
+            // ------------------------------------------------
+
+            assertEquals(
+                signature(
+                    naiveL(
+                        canonical,
+                        naiveDepth
+                    )
+                ),
+                signature(m.l()),
+                message + ", wrong l(m)"
+            );
+
+
+            // ------------------------------------------------
+            // m'
+            // ------------------------------------------------
+
+            assertEquals(
+                signature(
+                    naiveDerived(
+                        canonical,
+                        naiveDepth
+                    )
+                ),
+                signature(
+                    m.DerivedMultisegment()
+                ),
+                message + ", wrong m'"
+            );
+
+
+            // ------------------------------------------------
+            // Leading indices
+            // ------------------------------------------------
+
+            List<Integer> expectedLeading =
+                naiveLeadingIndices(canonical);
+
+            assertEquals(
+                expectedLeading,
+                m.LeadingIndices(),
+                message
+                + ", wrong LeadingIndices"
+            );
+
+
+            // ------------------------------------------------
+            // Delta°
+            // ------------------------------------------------
+
+            int min =
+                canonical.get(0).b;
+
+            int k =
+                expectedLeading.size();
+
+            Segment deltaCircle =
+                m.DeltaCircle();
+
+            assertEquals(
+                min,
+                deltaCircle.b,
+                message
+                + ", wrong DeltaCircle beginning"
+            );
+
+            assertEquals(
+                min + k - 1,
+                deltaCircle.e,
+                message
+                + ", wrong DeltaCircle ending"
+            );
+
+
+            // ------------------------------------------------
+            // m†
+            // ------------------------------------------------
+
+            assertEquals(
+                signature(
+                    naiveMCross(canonical)
+                ),
+                signature(m.MCross()),
+                message + ", wrong m†"
+            );
+        }
+    }
+
+
+    // ============================================================
+    // Corollary 3.4
+    //
+    // Hypothesis:
+    //
+    //     min m < min l(m)
+    //
+    // Conclusions:
+    //
+    //     l(m) = l(m†)
+    //
+    //     Delta°(m) = Delta°(m')
+    //
+    //     (m†)' = (m')†
+    // ============================================================
+
+
+    private static boolean satisfiesCorollaryHypothesis(
+        MultiSegment m
+    ) {
+        if (m.size() == 0) {
+            return false;
+        }
+
+        List<Segment> original =
+            expanded(m);
+
+        List<Segment> highestLadder =
+            expanded(m.l());
+
+        return minB(original) <
+               minB(highestLadder);
+    }
+
+
+    private static void assertCorollary(
+        MultiSegment m,
+        String message
+    ) {
+        assertTrue(
+            satisfiesCorollaryHypothesis(m),
+            message
+            + ": hypothesis min m < min l(m) is false."
+        );
+
+
+        MultiSegment mDagger =
+            m.MCross();
+
+        MultiSegment mPrime =
+            m.DerivedMultisegment();
+
+
+        /*
+         * Under the hypothesis, both are nonzero.
+         */
+        assertTrue(
+            mDagger.size() > 0,
+            message + ": m† unexpectedly empty."
+        );
+
+        assertTrue(
+            mPrime.size() > 0,
+            message + ": m' unexpectedly empty."
+        );
+
+
+        // ------------------------------------------------
+        // l(m) = l(m†)
+        // ------------------------------------------------
+
+        assertEquals(
+            signature(m.l()),
+            signature(mDagger.l()),
+            message
+            + ": l(m) != l(m†)"
+        );
+
+
+        // ------------------------------------------------
+        // Delta°(m) = Delta°(m')
+        // ------------------------------------------------
+
+        Segment leftCircle =
+            m.DeltaCircle();
+
+        Segment rightCircle =
+            mPrime.DeltaCircle();
+
+        assertEquals(
+            leftCircle.b,
+            rightCircle.b,
+            message
+            + ": Delta° beginnings differ."
+        );
+
+        assertEquals(
+            leftCircle.e,
+            rightCircle.e,
+            message
+            + ": Delta° endings differ."
+        );
+
+
+        // ------------------------------------------------
+        // (m†)' = (m')†
+        // ------------------------------------------------
+
+        assertEquals(
+            signature(
+                mDagger.DerivedMultisegment()
+            ),
+            signature(
+                mPrime.MCross()
+            ),
+            message
+            + ": (m†)' != (m')†"
+        );
+    }
+
+
+    @Test
+    public void corollaryHardExample() {
+
+        MultiSegment m =
+            new MultiSegment(
+                s(9, 11),
+                s(1, 4),
+                s(5, 7),
+                s(8, 12),
+                s(2, 3),
+                s(9, 11),
+                s(4, 8)
+            );
+
+        /*
+         * Here
+         *
+         * min m = 1
+         *
+         * l(m) =
+         * [2,4] + [5,8] + [9,12]
+         *
+         * so min l(m) = 2.
+         *
+         * Hence 1 < 2 and the corollary applies.
+         */
+        assertCorollary(
+            m,
+            "Hard deterministic corollary example"
+        );
+    }
+
+
+    @Test
+    public void corollaryWithRepeatedSegments() {
+
+        MultiSegment m =
+            new MultiSegment(
+                s(1, 4),
+                s(1, 4),
+                s(1, 4),
+                s(2, 4),
+                s(3, 6),
+                s(3, 5)
+            );
+
+        assertTrue(
+            satisfiesCorollaryHypothesis(m)
+        );
+
+        assertCorollary(
+            m,
+            "Repeated-segment corollary example"
+        );
+    }
+
+
+    @Test
+    public void randomizedCorollaryUnderItsHypothesis() {
+
+        Random random =
+            new Random(0xC0110A7L);
+
+        int tested = 0;
+
+
+        for (
+            int trial = 0;
+            trial < 1000;
+            trial++
+        ) {
             int n =
                 1 + random.nextInt(10);
 
@@ -1042,235 +1580,40 @@ public class MultiSegmentTest {
             MultiSegment m =
                 new MultiSegment(input);
 
-            List<Segment> canonical =
-                expanded(m);
 
-            int[] naiveDepth =
-                naiveDepths(canonical);
+            /*
+             * Corollary 3.4 does not claim anything
+             * when the hypothesis is false.
+             */
+            if (
+                !satisfiesCorollaryHypothesis(m)
+            ) {
+                continue;
+            }
 
 
-            String message =
-                "Trial " + trial
+            tested++;
+
+            assertCorollary(
+                m,
+                "Corollary trial "
+                + trial
                 + ", m = "
-                + signature(canonical);
-
-
-            // -------------------------
-            // depth
-            // -------------------------
-
-            for (
-                int i = 0;
-                i < canonical.size();
-                i++
-            ) {
-                assertEquals(
-                    naiveDepth[i],
-                    m.depth(i),
-                    message
-                    + ", wrong depth at index "
-                    + i
-                );
-            }
-
-
-            // -------------------------
-            // SegmentTransform
-            // -------------------------
-
-            for (
-                int i = 0;
-                i < canonical.size();
-                i++
-            ) {
-
-                Segment expected =
-                    naiveSegmentTransform(
-                        canonical,
-                        naiveDepth,
-                        i
-                    );
-
-                Segment actual =
-                    m.SegmentTransform(i);
-
-
-                assertEquals(
-                    expected.b,
-                    actual.b,
-                    message
-                    + ", wrong Delta' beginning at "
-                    + i
-                );
-
-                assertEquals(
-                    expected.e,
-                    actual.e,
-                    message
-                    + ", wrong Delta' ending at "
-                    + i
-                );
-            }
-
-
-            // -------------------------
-            // I'
-            // -------------------------
-
-            Set<Integer> expectedDistinguished =
-                new HashSet<>();
-
-            for (
-                List<Integer> fiber :
-                naiveFibers(naiveDepth)
-            ) {
-                expectedDistinguished.add(
-                    fiber.get(
-                        fiber.size() - 1
-                    )
-                );
-            }
-
-
-            assertEquals(
-                expectedDistinguished,
-                m.DistinguishedIndices(),
-                message + ", wrong I'"
-            );
-
-
-            // -------------------------
-            // l(m)
-            // -------------------------
-
-            assertSameMultisegment(
-                naiveL(
-                    canonical,
-                    naiveDepth
-                ),
-                m.l()
-            );
-
-
-            // -------------------------
-            // m'
-            // -------------------------
-
-            assertSameMultisegment(
-                naiveDerived(
-                    canonical,
-                    naiveDepth
-                ),
-                m.DerivedMultisegment()
-            );
-
-
-            // -------------------------
-            // i1,...,ik
-            // -------------------------
-
-            List<Integer> expectedLeading =
-                naiveLeadingIndices(canonical);
-
-            assertEquals(
-                expectedLeading,
-                m.LeadingIndices(),
-                message
-                + ", wrong LeadingIndices"
-            );
-
-
-            // -------------------------
-            // Delta°
-            // -------------------------
-
-            int min =
-                canonical.get(0).b;
-
-            int k =
-                expectedLeading.size();
-
-            Segment deltaCircle =
-                m.DeltaCircle();
-
-
-            assertEquals(
-                min,
-                deltaCircle.b,
-                message
-                + ", wrong DeltaCircle beginning"
-            );
-
-            assertEquals(
-                min + k - 1,
-                deltaCircle.e,
-                message
-                + ", wrong DeltaCircle ending"
-            );
-
-
-            // -------------------------
-            // m†
-            // -------------------------
-
-            assertSameMultisegment(
-                naiveMCross(canonical),
-                m.MCross()
+                + signature(m)
             );
         }
-    }
-
-
-    // ============================================================
-    // Corollary
-    //
-    //     l(m) = l(m†)
-    //     Delta°(m) = Delta°(m†)
-    //     (m†)' = (m')†
-    //
-    // ============================================================
-
-
-    private static void assertCorollary(
-        MultiSegment m
-    ) {
-
-        assertTrue(
-            m.size() > 0,
-            "The corollary is being tested only for nonzero m."
-        );
-
-
-        MultiSegment mCross =
-            m.MCross();
-
-
-        // l(m) = l(m†)
-        assertSameMultisegment(
-            m.l(),
-            mCross.l()
-        );
 
 
         /*
-         * DeltaCircle is currently defined only for a
-         * nonempty multisegment.
+         * Ensure that the random test did not accidentally
+         * filter out almost every example.
          */
-        if (mCross.size() > 0) {
-
-            assertSameSegment(
-                m.DeltaCircle(),
-                mCross.DeltaCircle()
-            );
-        }
-
-
-        // (m†)' = (m')†
-        assertSameMultisegment(
-            mCross.DerivedMultisegment(),
-            m.DerivedMultisegment()
-                .MCross()
+        assertTrue(
+            tested >= 50,
+            "Too few random multisegments satisfied "
+            + "the corollary hypothesis. Tested only "
+            + tested
+            + "."
         );
     }
-
 }
